Trying clinit/init replacements